1. App Overview Frame & 2. JokboView Base Frame

--- a/HyuJokbo/HyuJokbo/DataCenter.plist
+++ b/HyuJokbo/HyuJokbo/DataCenter.plist
@@ -3,14 +3,40 @@
 <plist version="1.0">
 <array>
 	<dict>
-		<key>title</key>
-		<string></string>
-		<key>contents</key>
-		<string></string>
-		<key>New item</key>
-		<string></string>
-		<key>New item - 3</key>
-		<string></string>
+		<key>subject</key>
+		<string>객체지향</string>
+		<key>professor</key>
+		<string>유인경 교수님</string>
+		<key>like</key>
+		<integer>0</integer>
+		<key>reply</key>
+		<data></data>
+		<key>uploadDate</key>
+		<date>2017-05-11T16:12:02Z</date>
+	</dict>
+	<dict>
+		<key>subject</key>
+		<string>소프트웨어 스튜디오</string>
+		<key>professor</key>
+		<string>유민수 교수님</string>
+		<key>like</key>
+		<integer>0</integer>
+		<key>reply</key>
+		<data></data>
+		<key>uploadDate</key>
+		<date>2017-05-11T16:12:02Z</date>
+	</dict>
+	<dict>
+		<key>subject</key>
+		<string>오토마타</string>
+		<key>professor</key>
+		<string>박희진 교수님</string>
+		<key>like</key>
+		<integer>0</integer>
+		<key>reply</key>
+		<data></data>
+		<key>uploadDate</key>
+		<date>2017-05-11T16:12:02Z</date>
 	</dict>
 </array>
 </plist>
