--- a/HyuJokbo/Podfile
+++ b/HyuJokbo/Podfile
@@ -6,5 +6,8 @@ platform :ios, '10.3'
 use_frameworks!
 
 target 'HyuJokbo' do
-    pod 'Alamofire', '~> 4.4'
-		end
+	pod 'Alamofire', '~> 4.4'
+	pod 'Firebase/Core'
+	pod 'Firebase/Database'
+	pod 'DLRadioButton', '~> 1.4'
+end
