--- a/HyuJokbo/Podfile
+++ b/HyuJokbo/Podfile
@@ -11,6 +11,7 @@ target 'HyuJokbo' do
 	#Firebase
 	pod 'Firebase/Core'
 	pod 'Firebase/Database'
+    pod 'Firebase/Storage'
 	pod 'Firebase/Auth'
 	
 	#Facebook
