--- a/HyuJokbo/Podfile
+++ b/HyuJokbo/Podfile
@@ -26,4 +26,7 @@ target 'HyuJokbo' do
 	pod 'GoogleSignIn'
 
 	pod 'DLRadioButton', '~> 1.4'
+
+    #BSImagePicker
+    pod "BSImagePicker", "~> 2.4"
 end
